--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustci"
 version = "0.1.0"
-authors = ["fedor <fedor>"]
+authors = ["Fedor Logachev <not.fl3@gmail.com>", "gendx"]
 
 [dependencies]
 tempdir = "0.3"
